pkg/gox/testdata/errors/duplicate_key.gox
package main

import gf "github.com/jin-wu/goframe/pkg/goframe"

func View(id int) gf.Node {
	return <p Key={id} Key="again">Broken</p>
}
